--- a/generator/templates/endpoint.twig
+++ b/generator/templates/endpoint.twig
@@ -36,7 +36,7 @@ class {{ className|title }} extends AbstractEndpoint
 
 {% for part, info in data.url.parts %}
 {% if info.required == true %}
-        if (isset(${{ part }}) !== true) {
+        if (isset($this->{{ part }}) !== true) {
             throw new Exceptions\BadMethodCallException(
                 '{{ part }} is required for {{ className }}'
             );
@@ -44,10 +44,10 @@ class {{ className|title }} extends AbstractEndpoint
 
 {% endif %}
 {% endfor %}
-        $uri   = '{{ data.url.path }}';
 {% for part, info in data.url.parts %}
         ${{ part }} = $this->{{ part }};
 {% endfor %}
+        $uri   = "{{ data.url.path }}";
 {% set counter = 0 %}
 {% for part, info in data.url.parts %}
 {% if info.required != true %}
