Pass the Endpoint DI anonymous function into Abstractnamespace

--- a/generator/templates/namespace.twig
+++ b/generator/templates/namespace.twig
@@ -21,7 +21,7 @@ public function {{ functionName }}($params = null)
 {% endfor %}
 
     /** @var Endpoints\{{ namespace }} $endpoint */
-    $endpoint = $this->params['endpoint']('{{ namespace }}');
+    $endpoint = $this->dicEndpoints('{{ namespace }}');
 {% for arg in extractList %}
     {{ loop.first ? '$endpoint' : '         ' }}->set{{ arg|title }}(${{ arg }}){{ loop.last ? ';' }}
 {% endfor %}
