Fixed empty doc for API references

--- a/util/docstheme/pages/class.twig
+++ b/util/docstheme/pages/class.twig
@@ -36,9 +36,8 @@ The {{ class_type(class) }} defines the following methods:
 {% if method.name != "__construct" %}
 
 
-{% if class.shortname != "ClientBuilder" %}
 [[{{ sanitize(replace_backslash(method)~"_"~method.name) }}]]
-.`{{ method.name }}()`
+.`{{ method.name }}{{ block('method_parameters_signature') }}`
 {% if method.tags('note') %}
 {% for note in method.tags('note') %}
 *NOTE:* {{ note|join(' ') }}
@@ -52,30 +51,8 @@ The {{ class_type(class) }} defines the following methods:
 {{ method.shortdesc|raw }}
 {% endif %}
 */
-
-$params = [
-    // ...
-];
-
-$client = ClientBuilder::create()->build();
-$response = {{ get_namespace(class) }}->{{ method.name }}({{ param_list(method)|trim(',') }});
 ----
 ****
-{% else %}
-[[{{ sanitize(replace_backslash(method)~"_"~method.name) }}]]
-.`{{ method.name }}()`
-****
-[source,php]
-----
-/*
-{% if method.shortdesc %}
-    {{ method.shortdesc|raw }}
-{% endif %}
-*/
-
-----
-****
-{% endif %}
 {% endif %}
 
 {% endfor %}
@@ -83,3 +60,7 @@ $response = {{ get_namespace(class) }}->{{ method.name }}({{ param_list(method)|
 
 {% endblock %}
 
+{% block method_parameters_signature -%}
+    {%- from "macros.twig" import method_parameters_signature -%}
+    {{ method_parameters_signature(method) }}
+{%- endblock %}
